Global variable test

--- a/myproject/conf/bitbake.conf
+++ b/myproject/conf/bitbake.conf
@@ -3,3 +3,5 @@ CACHE   = "${TMPDIR}/cache"
 STAMP   = "${TMPDIR}/stamps"
 T       = "${TMPDIR}/work"
 B       = "${TMPDIR}"
+
+VAR_DEFINED_IN_GLOBAL = "Global default value"
